<resources>
    <string name="app_name">Testing System</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign up</string>
    <string name="go_back">Go back</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="registration_failed">Registration failed</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="test_form">Test form</string>
    <string name="test_detail">Test</string>
    <string name="test_passing">Test passing</string>
    <string name="result_preview">Result preview</string>
    <string name="test_result">Test result</string>
    <string name="test_results">Test results</string>
    <string name="tests">Tests</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="add_question">Add question</string>
    <string name="save_question">Save question</string>
    <string name="text">Text</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="change">Change</string>
    <string name="display_name">Display name</string>
    <string name="change_avatar">Change avatar</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="score">Score</string>
    <string name="answers">Answers</string>
    <string name="start_test">Start test</string>
    <string name="results">Results</string>
    <string name="copy_link">Copy link</string>
    <string name="edit_test">Edit test</string>
    <string name="delete_test">Delete test</string>
    <string name="author">Author</string>
    <string name="question_count">Question count</string>
    <string name="title">Title</string>
    <string name="min_scores">Min scores</string>
    <string name="information">Information</string>
    <string name="description">Description</string>
    <string name="version">Version</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish_test">Finish test</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="scores">Scores</string>
    <string name="passed">Passed</string>
    <string name="close">Close</string>
    <string name="you_don_t_have_tests">You don\'t have tests</string>
    <string name="view_the_result">View the result</string>
    <string name="not_passed">Not passed</string>
    <string name="add_answer">Add answer</string>
    <string name="registration">Registration</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="test_has_created">Test has created</string>
    <string name="test_has_updated">Test has updated</string>
    <string name="password_has_changed">Password has changed</string>
    <string name="incorrect_password">Incorrect password</string>
</resources>