<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_graph"
    app:startDestination="@id/splash_fragment">
    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.example.testsys.screens.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/splash_fragment">
        <action
            android:id="@+id/action_splashFragment_to_profile_fragment"
            app:destination="@id/profile_fragment"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_sign_in_fragment"
            app:destination="@id/sign_in_fragment"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.testsys.screens.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment">
        <action
            android:id="@+id/action_profile_fragment_to_sign_in_fragment"
            app:destination="@id/sign_in_fragment"
            app:popUpTo="@id/profile_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/sign_in_fragment"
        android:name="com.example.testsys.screens.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/sign_in_fragment">
        <action
            android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
            app:destination="@id/sign_up_fragment" />
        <action
            android:id="@+id/action_sign_in_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment"
            app:popUpTo="@id/sign_in_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/sign_up_fragment"
        android:name="com.example.testsys.screens.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/sign_up_fragment">
        <argument
            android:name="email"
            app:argType="string" />
        <action
            android:id="@+id/action_sign_up_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment"
            app:popUpTo="@id/sign_up_fragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>